<resources>
    <string name="app_name">Orgs</string>
    <string name="txt_name">Nome</string>
    <string name="txt_description">Descrição</string>
    <string name="txt_price">Preço</string>
    <string name="txt_create">SALVAR</string>
    <string name="txt_load">Carregar</string>
    <string name="txt_url">URL da imagem</string>
    <string name="txt_register_product">Cadastrar Produto</string>
    <string name="txt_edit">Editar</string>
    <string name="txt_delete">Deletar</string>
    <string name="txt_alterar_produto">Alterar Produto</string>
    <string name="txt_sort">Ordenar</string>
    <string name="txt_sort_name_a_z">Nome A - Z</string>
    <string name="txt_sort_name_z_a">Nome Z - A</string>
    <string name="txt_sort_description_a_z">Descrição A - Z</string>
    <string name="txt_sort_description_z_a">Descrição Z - A</string>
    <string name="txt_price_higher_lower">Valor maior para menor</string>
    <string name="txt_price_lower_higher">Valor menor para maior</string>
    <string name="txt_no_ordering">Sem ordenação</string>
    <string name="txt_login_activity_title">ORGS</string>
    <string name="txt_activity_login_user">Usuário</string>
    <string name="txt_activity_login_password">Senha</string>
    <string name="txt_activity_login_login">Entrar</string>
    <string name="txt_activity_login_register_user">Cadastrar Usuário</string>
    <string name="txt_activity_register_user_form_user">Usuário</string>
    <string name="txt_activity_register_user_form_name">Nome</string>
    <string name="txt_activity_register_user_form_password">Senha</string>
    <string name="txt_activity_register_user_form_register">Cadastrar</string>
    <string name="txt_menu_product_list_logout">Sair</string>
    <string name="txt_toast_authentication_failure">Falha na autenticação</string>
    <string name="txt_toast_failed_register_user">Falha ao cadastrar usuário</string>
    <string name="txt_menu_product_list_user_profile">Perfil do Usuário</string>
    <string name="txt_btn_activity_user_profile_logout">SAIR DO APP</string>
    <string name="txt_menu_all_products">Todos os Produtos</string>
    <string name="txt_autocomplete_hint_activity_product_form">Digite o nome do Usuário</string>
    <string name="txt_title_register_user_form_activity">Cadastrar Usuário</string>
</resources>