<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.RegisterUserFormActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_activity_register_user_form_user"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_activity_register_user_form_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_activity_register_user_form_user"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_activity_register_user_form_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/til_activity_register_user_form_user"
            app:layout_constraintStart_toStartOf="@id/til_activity_register_user_form_user"
            app:layout_constraintTop_toBottomOf="@id/til_activity_register_user_form_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_activity_register_user_form_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_activity_register_user_form_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_activity_register_user_form_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/til_activity_register_user_form_name"
            app:layout_constraintStart_toStartOf="@id/til_activity_register_user_form_name"
            app:layout_constraintTop_toBottomOf="@id/til_activity_register_user_form_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_activity_register_user_form_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_activity_register_user_form_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_activity_register_user_form_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_activity_register_user_form_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/til_activity_register_user_form_password"
            app:layout_constraintStart_toStartOf="@id/til_activity_register_user_form_password"
            app:layout_constraintTop_toBottomOf="@id/til_activity_register_user_form_password"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
